// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDashboardFilter changes filter value 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{"networkNodes":[[{"type":"network","name":"zone"}]],"switchNodes":[[{"type":"network","name":"switchGroup"}]]}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter gets initial value from search parameters 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{"networkNodes":[[{"0":"v","1":"e","2":"n","3":"u","4":"e","5":"1","name":"zone"}],[{"0":"v","1":"e","2":"n","3":"u","4":"e","5":"2","name":"zone"}]],"switchNodes":[[{"0":"v","1":"e","2":"n","3":"u","4":"e","5":"1","name":"switchGroup"}],[{"0":"v","1":"e","2":"n","3":"u","4":"e","5":"2","name":"switchGroup"}]]}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter set empty array when path is empty 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{}}
  </div>
</DocumentFragment>
`;

exports[`useDashboardFilter should render correctly 1`] = `
<DocumentFragment>
  <div>
    {"path":[{"type":"network","name":"Network"}],"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours","filter":{}}
  </div>
</DocumentFragment>
`;
